--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     compile "com.squareup.retrofit2:retrofit:2.0.0"
     compile "com.squareup.retrofit2:converter-moshi:2.0.0"
     compile 'com.github.v-adhithyan:peacock:dba09ffc7d'
+    compile 'com.google.android.gms:play-services-ads:8+'
+    compile 'com.ashokvarma.android:bottom-navigation-bar:1.3.0'
+
 }
 repositories {
     mavenCentral()
