--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        manifestPlaceholders = [HOCKEYAPP_APP_ID: "388f3d4aee6a453a8c39f9a501324886"]
     }
     buildTypes {
         release {
@@ -38,7 +39,7 @@ dependencies {
     compile 'com.github.v-adhithyan:peacock:dba09ffc7d'
     compile 'com.google.android.gms:play-services-ads:8+'
     compile 'com.ashokvarma.android:bottom-navigation-bar:1.3.0'
-
+    compile 'net.hockeyapp.android:HockeySDK:4.0.1'
 }
 repositories {
     mavenCentral()
