--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,10 +36,13 @@ dependencies {
     compile 'io.reactivex:rxandroid:1.2.1'
     compile "com.squareup.retrofit2:retrofit:2.0.0"
     compile "com.squareup.retrofit2:converter-moshi:2.0.0"
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'com.github.v-adhithyan:peacock:460221078d'
     compile 'com.google.android.gms:play-services-ads:8+'
     compile 'com.ashokvarma.android:bottom-navigation-bar:1.3.0'
     compile 'net.hockeyapp.android:HockeySDK:4.0.1'
+    compile 'com.github.jorgecastilloprz:fabprogresscircle:1.01@aar'
+    compile 'com.github.ybq:Android-SpinKit:1.0.4'
 }
 repositories {
     mavenCentral()
