--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile 'com.android.support:cardview-v7:23.2.+'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'io.reactivex:rxjava:1.1.6'
     compile 'io.reactivex:rxandroid:1.2.1'
@@ -40,11 +39,9 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'com.github.v-adhithyan:peacock:460221078d'
     compile 'com.google.android.gms:play-services-ads:8+'
-    compile 'com.ashokvarma.android:bottom-navigation-bar:1.3.0'
     compile 'net.hockeyapp.android:HockeySDK:4.0.1'
-    compile 'com.github.jorgecastilloprz:fabprogresscircle:1.01@aar'
-    compile 'com.github.ybq:Android-SpinKit:1.0.4'
-    compile 'com.skyfishjy.ripplebackground:library:1.0.1'
+    compile 'com.mikepenz:materialdrawer:5.3.6'
+    compile 'com.github.dmytrodanylyk:android-morphing-button:98a4986e56'
 }
 repositories {
     mavenCentral()
