--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,13 +30,13 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
+    compile 'com.android.support:cardview-v7:23.4.0'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'io.reactivex:rxjava:1.1.6'
     compile 'io.reactivex:rxandroid:1.2.1'
     compile "com.squareup.retrofit2:retrofit:2.0.0"
     compile "com.squareup.retrofit2:converter-moshi:2.0.0"
-    compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'com.github.v-adhithyan:peacock:460221078d'
     compile 'com.google.android.gms:play-services-ads:8+'
     compile 'net.hockeyapp.android:HockeySDK:4.0.1'
